<resources>
    <string name="app_name">GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="quantity">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="sure_text">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
