<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/title"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/groceryItem"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item"
                android:textSize="19dp"/>

            <EditText
                android:id="@+id/groceryQt"
                android:layout_below="@id/groceryItem"
                android:layout_marginTop="15dp"
                android:hint="@string/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
            <Button

                android:id="@+id/saveButton"
                android:layout_marginTop="5dp"
                android:layout_below="@id/groceryQt"
                android:text="@string/save_title"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>